set up disallowed variables drops

--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data with NLP Features.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data with NLP Features.ipynb
@@ -1542,404 +1542,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above output was used to construct the Variable Index file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load variable index\n",
+    "variable_index = pd.read_excel('Variable Index.xlsx')\n",
+    "variable_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Previous Rating missing - dropped  1393\n",
-      "totalCurrentAssets missing - dropped  45\n",
-      "totalCurrentLiabilities missing - dropped  5\n",
-      "revenue missing - dropped  93\n",
-      "marketCap missing - dropped  275\n",
-      "rating_on_previous_fixed_quarter_date missing - dropped  116\n",
-      "num_transparency missing - dropped  32\n"
+     "ename": "NameError",
+     "evalue": "name 'all_data_with_NLP_features' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Drop observations missing anything else\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m \u001b[43mall_data_with_NLP_features\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m col \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNext Rating\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNext Rating Date\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnext_rating_date_or_end_of_data\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[0;32m      4\u001b[0m         all_data_with_NLP_features_drop \u001b[38;5;241m=\u001b[39m all_data_with_NLP_features[all_data_with_NLP_features[col]\u001b[38;5;241m.\u001b[39mnotnull()]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'all_data_with_NLP_features' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>fixed_quarter_date</th>\n",
-       "      <th>earnings_call_date</th>\n",
-       "      <th>Rating</th>\n",
-       "      <th>rating_date</th>\n",
-       "      <th>Next Rating</th>\n",
-       "      <th>Next Rating Date</th>\n",
-       "      <th>Previous Rating</th>\n",
-       "      <th>Previous Rating Date</th>\n",
-       "      <th>next_rating_date_or_end_of_data</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Weak</th>\n",
-       "      <th>Active</th>\n",
-       "      <th>Passive</th>\n",
-       "      <th>Ovrst</th>\n",
-       "      <th>Undrst</th>\n",
-       "      <th>PN</th>\n",
-       "      <th>SW</th>\n",
-       "      <th>AP</th>\n",
-       "      <th>OU</th>\n",
-       "      <th>TONE1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2014-10-01</td>\n",
-       "      <td>2014-07-22</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2014-05-27</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2015-02-18</td>\n",
-       "      <td>AAA</td>\n",
-       "      <td>2014-04-24</td>\n",
-       "      <td>2015-02-18</td>\n",
-       "      <td>...</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>495.0</td>\n",
-       "      <td>186.0</td>\n",
-       "      <td>364.0</td>\n",
-       "      <td>131.0</td>\n",
-       "      <td>5.518519</td>\n",
-       "      <td>15.261905</td>\n",
-       "      <td>2.661290</td>\n",
-       "      <td>2.778626</td>\n",
-       "      <td>3.188264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2015-01-01</td>\n",
-       "      <td>2014-10-20</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2014-05-27</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2015-02-18</td>\n",
-       "      <td>AAA</td>\n",
-       "      <td>2014-04-24</td>\n",
-       "      <td>2015-02-18</td>\n",
-       "      <td>...</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>656.0</td>\n",
-       "      <td>199.0</td>\n",
-       "      <td>465.0</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>5.348485</td>\n",
-       "      <td>15.934783</td>\n",
-       "      <td>3.296482</td>\n",
-       "      <td>3.059211</td>\n",
-       "      <td>3.681858</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2015-04-01</td>\n",
-       "      <td>2015-01-27</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2015-02-18</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2015-05-28</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2014-05-27</td>\n",
-       "      <td>2015-05-28</td>\n",
-       "      <td>...</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>591.0</td>\n",
-       "      <td>208.0</td>\n",
-       "      <td>468.0</td>\n",
-       "      <td>151.0</td>\n",
-       "      <td>3.927711</td>\n",
-       "      <td>8.113636</td>\n",
-       "      <td>2.841346</td>\n",
-       "      <td>3.099338</td>\n",
-       "      <td>1.307366</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2015-07-01</td>\n",
-       "      <td>2015-04-27</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2015-06-02</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2015-08-25</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2015-05-28</td>\n",
-       "      <td>2015-08-25</td>\n",
-       "      <td>...</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>565.0</td>\n",
-       "      <td>214.0</td>\n",
-       "      <td>415.0</td>\n",
-       "      <td>135.0</td>\n",
-       "      <td>5.250000</td>\n",
-       "      <td>9.142857</td>\n",
-       "      <td>2.640187</td>\n",
-       "      <td>3.074074</td>\n",
-       "      <td>2.025933</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2015-10-01</td>\n",
-       "      <td>2015-07-21</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2015-08-25</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2016-05-20</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2015-06-02</td>\n",
-       "      <td>2016-05-20</td>\n",
-       "      <td>...</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>565.0</td>\n",
-       "      <td>219.0</td>\n",
-       "      <td>449.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>4.209877</td>\n",
-       "      <td>10.442857</td>\n",
-       "      <td>2.579909</td>\n",
-       "      <td>3.033784</td>\n",
-       "      <td>1.815531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6678</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2015-10-01</td>\n",
-       "      <td>2015-08-04</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2015-01-30</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2015-11-03</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2014-01-31</td>\n",
-       "      <td>2015-11-03</td>\n",
-       "      <td>...</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>623.0</td>\n",
-       "      <td>214.0</td>\n",
-       "      <td>298.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>3.611650</td>\n",
-       "      <td>15.634615</td>\n",
-       "      <td>2.911215</td>\n",
-       "      <td>2.013514</td>\n",
-       "      <td>1.744657</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6679</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2016-01-01</td>\n",
-       "      <td>2015-11-03</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2015-11-03</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2016-01-22</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2015-01-30</td>\n",
-       "      <td>2016-01-22</td>\n",
-       "      <td>...</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>737.0</td>\n",
-       "      <td>264.0</td>\n",
-       "      <td>395.0</td>\n",
-       "      <td>222.0</td>\n",
-       "      <td>3.766917</td>\n",
-       "      <td>15.848101</td>\n",
-       "      <td>2.791667</td>\n",
-       "      <td>1.779279</td>\n",
-       "      <td>1.596294</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6680</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "      <td>2016-02-16</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2016-01-22</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2016-12-23</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2015-11-03</td>\n",
-       "      <td>2016-12-23</td>\n",
-       "      <td>...</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>287.0</td>\n",
-       "      <td>469.0</td>\n",
-       "      <td>217.0</td>\n",
-       "      <td>3.565517</td>\n",
-       "      <td>17.506849</td>\n",
-       "      <td>2.926829</td>\n",
-       "      <td>2.161290</td>\n",
-       "      <td>2.287146</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6681</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2016-07-01</td>\n",
-       "      <td>2016-05-04</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2016-01-22</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2016-12-23</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2015-11-03</td>\n",
-       "      <td>2016-12-23</td>\n",
-       "      <td>...</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>765.0</td>\n",
-       "      <td>253.0</td>\n",
-       "      <td>449.0</td>\n",
-       "      <td>215.0</td>\n",
-       "      <td>3.572650</td>\n",
-       "      <td>15.235294</td>\n",
-       "      <td>3.023715</td>\n",
-       "      <td>2.088372</td>\n",
-       "      <td>1.739992</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6682</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2016-10-01</td>\n",
-       "      <td>2016-08-03</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2016-01-22</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2016-12-23</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>2015-11-03</td>\n",
-       "      <td>2016-12-23</td>\n",
-       "      <td>...</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>852.0</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>460.0</td>\n",
-       "      <td>201.0</td>\n",
-       "      <td>2.858896</td>\n",
-       "      <td>12.395349</td>\n",
-       "      <td>2.840000</td>\n",
-       "      <td>2.288557</td>\n",
-       "      <td>0.976340</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4724 rows × 160 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     ticker fixed_quarter_date earnings_call_date Rating rating_date  \\\n",
-       "1      AAPL         2014-10-01         2014-07-22     AA  2014-05-27   \n",
-       "2      AAPL         2015-01-01         2014-10-20     AA  2014-05-27   \n",
-       "3      AAPL         2015-04-01         2015-01-27     AA  2015-02-18   \n",
-       "4      AAPL         2015-07-01         2015-04-27     AA  2015-06-02   \n",
-       "5      AAPL         2015-10-01         2015-07-21     AA  2015-08-25   \n",
-       "...     ...                ...                ...    ...         ...   \n",
-       "6678    ZTS         2015-10-01         2015-08-04    BBB  2015-01-30   \n",
-       "6679    ZTS         2016-01-01         2015-11-03    BBB  2015-11-03   \n",
-       "6680    ZTS         2016-04-01         2016-02-16    BBB  2016-01-22   \n",
-       "6681    ZTS         2016-07-01         2016-05-04    BBB  2016-01-22   \n",
-       "6682    ZTS         2016-10-01         2016-08-03    BBB  2016-01-22   \n",
-       "\n",
-       "     Next Rating Next Rating Date Previous Rating Previous Rating Date  \\\n",
-       "1             AA       2015-02-18             AAA           2014-04-24   \n",
-       "2             AA       2015-02-18             AAA           2014-04-24   \n",
-       "3             AA       2015-05-28              AA           2014-05-27   \n",
-       "4             AA       2015-08-25              AA           2015-05-28   \n",
-       "5             AA       2016-05-20              AA           2015-06-02   \n",
-       "...          ...              ...             ...                  ...   \n",
-       "6678         BBB       2015-11-03             BBB           2014-01-31   \n",
-       "6679         BBB       2016-01-22             BBB           2015-01-30   \n",
-       "6680         BBB       2016-12-23             BBB           2015-11-03   \n",
-       "6681         BBB       2016-12-23             BBB           2015-11-03   \n",
-       "6682         BBB       2016-12-23             BBB           2015-11-03   \n",
-       "\n",
-       "     next_rating_date_or_end_of_data  ...  Weak Active  Passive  Ovrst  \\\n",
-       "1                         2015-02-18  ...  42.0  495.0    186.0  364.0   \n",
-       "2                         2015-02-18  ...  46.0  656.0    199.0  465.0   \n",
-       "3                         2015-05-28  ...  88.0  591.0    208.0  468.0   \n",
-       "4                         2015-08-25  ...  70.0  565.0    214.0  415.0   \n",
-       "5                         2016-05-20  ...  70.0  565.0    219.0  449.0   \n",
-       "...                              ...  ...   ...    ...      ...    ...   \n",
-       "6678                      2015-11-03  ...  52.0  623.0    214.0  298.0   \n",
-       "6679                      2016-01-22  ...  79.0  737.0    264.0  395.0   \n",
-       "6680                      2016-12-23  ...  73.0  840.0    287.0  469.0   \n",
-       "6681                      2016-12-23  ...  68.0  765.0    253.0  449.0   \n",
-       "6682                      2016-12-23  ...  86.0  852.0    300.0  460.0   \n",
-       "\n",
-       "      Undrst        PN         SW        AP        OU     TONE1  \n",
-       "1      131.0  5.518519  15.261905  2.661290  2.778626  3.188264  \n",
-       "2      152.0  5.348485  15.934783  3.296482  3.059211  3.681858  \n",
-       "3      151.0  3.927711   8.113636  2.841346  3.099338  1.307366  \n",
-       "4      135.0  5.250000   9.142857  2.640187  3.074074  2.025933  \n",
-       "5      148.0  4.209877  10.442857  2.579909  3.033784  1.815531  \n",
-       "...      ...       ...        ...       ...       ...       ...  \n",
-       "6678   148.0  3.611650  15.634615  2.911215  2.013514  1.744657  \n",
-       "6679   222.0  3.766917  15.848101  2.791667  1.779279  1.596294  \n",
-       "6680   217.0  3.565517  17.506849  2.926829  2.161290  2.287146  \n",
-       "6681   215.0  3.572650  15.235294  3.023715  2.088372  1.739992  \n",
-       "6682   201.0  2.858896  12.395349  2.840000  2.288557  0.976340  \n",
-       "\n",
-       "[4724 rows x 160 columns]"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Variables not used: 'Next Rating', 'Next Rating Date', 'next_rating_date_or_end_of_data'\n",
-    "# Potentially don't use 'Previous Rating', 'Previous Rating Date', 'previous_rating_date_or_start_of_data' also since they lead to a lot of loss\n",
+    "# Get disallowed variables\n",
+    "disallowed_variables = list(variable_index[variable_index['Variable Type'] == 'Disallowed']['column_name'])\n",
+    "\n",
     "# Drop observations missing anything else\n",
     "for col in all_data_with_NLP_features.columns:\n",
-    "    if col not in ['Next Rating', 'Next Rating Date', 'next_rating_date_or_end_of_data']:\n",
+    "    if col not in disallowed_variables:\n",
     "        all_data_with_NLP_features_drop = all_data_with_NLP_features[all_data_with_NLP_features[col].notnull()]\n",
     "        if len(all_data_with_NLP_features_drop) < len(all_data_with_NLP_features):\n",
     "            print(col, 'missing - dropped ', len(all_data_with_NLP_features) - len(all_data_with_NLP_features_drop))\n",
