more summary statistics

--- a/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
+++ b/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
@@ -5,3 +5,23 @@
 \renewcommand{\numCompanies}{387}
 \renewcommand{\numQuarters}{4724}
 \renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
