code to remove readability

--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data with NLP Features.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data with NLP Features.ipynb
@@ -1348,8 +1348,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove extraneous variables 'Rating Rank AAA is 10', 'rating_on_previous_fixed_quarter_date AAA is 10'\n",
-    "all_data_with_NLP_features = all_data_with_NLP_features.drop(['Rating Rank AAA is 10', 'rating_on_previous_fixed_quarter_date AAA is 10'], axis = 1)"
+    "# Remove extraneous variables 'Rating Rank AAA is 10', 'rating_on_previous_fixed_quarter_date AAA is 10', 'readability'\n",
+    "all_data_with_NLP_features = all_data_with_NLP_features.drop(['Rating Rank AAA is 10', 'rating_on_previous_fixed_quarter_date AAA is 10', 'readability'], axis = 1)"
    ]
   },
   {
