--- a/Output/All Data EDA/Tabular EDA/Numeric_Summary_Statistics.tex
+++ b/Output/All Data EDA/Tabular EDA/Numeric_Summary_Statistics.tex
@@ -1,6 +1,18 @@
-\begin{tabular}{lccccc}
- & Mean & Minimum & Median & Maximum & Standard Deviation & Variable Type \\
-Variable Name &  &  &  &  &  &  \\
+\begin{longtable}{ccccccc}
+\toprule
+Variable Name & Mean & Minimum & Median & Maximum & Standard Deviation & Variable Type \\
+\midrule
+\endfirsthead
+\toprule
+Variable Name & Mean & Minimum & Median & Maximum & Standard Deviation & Variable Type \\
+\midrule
+\endhead
+\midrule
+\multicolumn{7}{r}{Continued on next page} \\
+\midrule
+\endfoot
+\bottomrule
+\endlastfoot
 Altman's Z Score & 1.88 & -0.91 & 1.58 & 7.56 & 1.30 & Altman's Z Score \\
 Accounts Payable (Balance Sheet) & 928,879,944.12 & -237,651,171.00 & 338,150,000.00 & 11,433,000,000.00 & 1,529,128,185.80 & Financial Statements \\
 Accounts Payable (Cash Flow Statement) & 4,706,860.62 & -321,769,000.00 & 0.00 & 1,789,652,000.00 & 80,197,009.20 & Financial Statements \\
@@ -110,8 +122,7 @@ First Principal Component of Tone & -0.01 & -2.64 & -0.20 & 25.35 & 1.34 & NLP F
 Gunning-Fog Score & 12.52 & 8.55 & 12.43 & 19.29 & 1.32 & NLP Feature \\
 Number of Questions & 36.24 & 0.00 & 35.00 & 107.00 & 16.29 & NLP Feature \\
 Numeric Transparency & 0.12 & 0.01 & 0.12 & 0.40 & 0.05 & NLP Feature \\
-Postitivity Score & 0.19 & -0.20 & 0.18 & 0.65 & 0.10 & NLP Feature \\
-Readability & 12.52 & 8.55 & 12.43 & 19.29 & 1.32 & NLP Feature \\
+Positivity Score & 0.19 & -0.20 & 0.18 & 0.65 & 0.10 & NLP Feature \\
 Word Count & 8,851.58 & 1,782.00 & 9,077.00 & 22,006.00 & 2,489.13 & NLP Feature \\
 Change Since Last Fixed Quarter Date & 0.01 & -2.00 & 0.00 & 2.00 & 0.29 & Predicted - Change \\
-\end{tabular}
+\end{longtable}
