--- a/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
+++ b/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
@@ -25,3 +25,13 @@
 \renewcommand{\numCompanies}{387}
 \renewcommand{\numQuarters}{4724}
 \renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4,724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4,724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4,724}
+\renewcommand{\numCompanies}{387}
