--- a/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
+++ b/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
@@ -1,1 +1,5 @@
 \newcommand{\shareNotChanges}{0.9358594411515665}
+\renewcommand{\shareNotChanges}{0.9358594411515665}
+\renewcommand{\shareNotChanges}{0.9358594411515665}
+\renewcommand{\shareNotChanges}{93.59\%}
+\renewcommand{\shareNotChanges}{93.59\%}
