new latex to test

--- a/Output/All Data EDA/Tabular EDA/Numeric_Summary_Statistics.tex
+++ b/Output/All Data EDA/Tabular EDA/Numeric_Summary_Statistics.tex
@@ -1,3 +1,4 @@
+\small
 \begin{longtable}{ccccccc}
 \toprule
 Variable Name & Mean & Minimum & Median & Maximum & Standard Deviation & Variable Type \\
@@ -126,3 +127,5 @@ Positivity Score & 0.19 & -0.20 & 0.18 & 0.65 & 0.10 & NLP Feature \\
 Word Count & 8,851.58 & 1,782.00 & 9,077.00 & 22,006.00 & 2,489.13 & NLP Feature \\
 Change Since Last Fixed Quarter Date & 0.01 & -2.00 & 0.00 & 2.00 & 0.29 & Predicted - Change \\
 \end{longtable}
+
+\normalsize
