--- a/Code/Exploratory Data Analysis/All Data/All Data - Tabular EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - Tabular EDA.ipynb
@@ -3370,7 +3370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3562,7 +3562,7 @@
        "[112 rows x 7 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3585,7 +3585,7 @@
     "                            .sort_values(['Variable Type', 'Variable Name']))\n",
     "\n",
     "# Export to Excel\n",
-    "sum_stats_clean.to_excel(output_folder + 'Numeric Summary Statistics.xlsx', index=False)\n",
+    "sum_stats_clean.to_excel(output_folder + 'Numeric_Summary_Statistics.xlsx', index=False)\n",
     "\n",
     "# Export to LaTeX\n",
     "# Center all columns\n",
@@ -3595,7 +3595,10 @@
     "for col in ['Mean', 'Minimum', 'Median', 'Maximum', 'Standard Deviation']:\n",
     "    sum_stats_clean[col] = sum_stats_clean[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Export to LaTeX\n",
-    "sum_stats_clean.to_latex(output_folder + 'Numeric_Summary_Statistics.tex', index=False, column_format='c' * 7, escape=False, longtable=True)\n",
+    "lt_string = sum_stats_clean.to_latex(index=False, column_format='c' * 7, escape=False, longtable=True, label='tab:numeric_summary_statistics', caption='Numeric Summary Statistics')\n",
+    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "with open(output_folder + 'Numeric_Summary_Statistics.tex', 'w') as f:\n",
+    "    f.write(latex_with_font_size)\n",
     "\n",
     "sum_stats_clean"
    ]
