--- a/Code/Exploratory Data Analysis/All Data/All Data - Tabular EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - Tabular EDA.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        " 'transcript': 'Transcript'}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -322,16 +322,16 @@
        "      <td>2014-04-24</td>\n",
        "      <td>2015-02-18</td>\n",
        "      <td>...</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>495.0</td>\n",
-       "      <td>186.0</td>\n",
-       "      <td>364.0</td>\n",
-       "      <td>131.0</td>\n",
-       "      <td>5.518519</td>\n",
-       "      <td>15.261905</td>\n",
-       "      <td>2.661290</td>\n",
-       "      <td>2.778626</td>\n",
-       "      <td>3.188264</td>\n",
+       "      <td>42.00</td>\n",
+       "      <td>495.00</td>\n",
+       "      <td>186.00</td>\n",
+       "      <td>364.00</td>\n",
+       "      <td>131.00</td>\n",
+       "      <td>5.52</td>\n",
+       "      <td>15.26</td>\n",
+       "      <td>2.66</td>\n",
+       "      <td>2.78</td>\n",
+       "      <td>3.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -346,16 +346,16 @@
        "      <td>2014-04-24</td>\n",
        "      <td>2015-02-18</td>\n",
        "      <td>...</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>656.0</td>\n",
-       "      <td>199.0</td>\n",
-       "      <td>465.0</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>5.348485</td>\n",
-       "      <td>15.934783</td>\n",
-       "      <td>3.296482</td>\n",
-       "      <td>3.059211</td>\n",
-       "      <td>3.681858</td>\n",
+       "      <td>46.00</td>\n",
+       "      <td>656.00</td>\n",
+       "      <td>199.00</td>\n",
+       "      <td>465.00</td>\n",
+       "      <td>152.00</td>\n",
+       "      <td>5.35</td>\n",
+       "      <td>15.93</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>3.06</td>\n",
+       "      <td>3.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -370,16 +370,16 @@
        "      <td>2014-05-27</td>\n",
        "      <td>2015-05-28</td>\n",
        "      <td>...</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>591.0</td>\n",
-       "      <td>208.0</td>\n",
-       "      <td>468.0</td>\n",
-       "      <td>151.0</td>\n",
-       "      <td>3.927711</td>\n",
-       "      <td>8.113636</td>\n",
-       "      <td>2.841346</td>\n",
-       "      <td>3.099338</td>\n",
-       "      <td>1.307366</td>\n",
+       "      <td>88.00</td>\n",
+       "      <td>591.00</td>\n",
+       "      <td>208.00</td>\n",
+       "      <td>468.00</td>\n",
+       "      <td>151.00</td>\n",
+       "      <td>3.93</td>\n",
+       "      <td>8.11</td>\n",
+       "      <td>2.84</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>1.31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -394,16 +394,16 @@
        "      <td>2015-05-28</td>\n",
        "      <td>2015-08-25</td>\n",
        "      <td>...</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>565.0</td>\n",
-       "      <td>214.0</td>\n",
-       "      <td>415.0</td>\n",
-       "      <td>135.0</td>\n",
-       "      <td>5.250000</td>\n",
-       "      <td>9.142857</td>\n",
-       "      <td>2.640187</td>\n",
-       "      <td>3.074074</td>\n",
-       "      <td>2.025933</td>\n",
+       "      <td>70.00</td>\n",
+       "      <td>565.00</td>\n",
+       "      <td>214.00</td>\n",
+       "      <td>415.00</td>\n",
+       "      <td>135.00</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>9.14</td>\n",
+       "      <td>2.64</td>\n",
+       "      <td>3.07</td>\n",
+       "      <td>2.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -418,16 +418,16 @@
        "      <td>2015-06-02</td>\n",
        "      <td>2016-05-20</td>\n",
        "      <td>...</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>565.0</td>\n",
-       "      <td>219.0</td>\n",
-       "      <td>449.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>4.209877</td>\n",
-       "      <td>10.442857</td>\n",
-       "      <td>2.579909</td>\n",
-       "      <td>3.033784</td>\n",
-       "      <td>1.815531</td>\n",
+       "      <td>70.00</td>\n",
+       "      <td>565.00</td>\n",
+       "      <td>219.00</td>\n",
+       "      <td>449.00</td>\n",
+       "      <td>148.00</td>\n",
+       "      <td>4.21</td>\n",
+       "      <td>10.44</td>\n",
+       "      <td>2.58</td>\n",
+       "      <td>3.03</td>\n",
+       "      <td>1.82</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -466,16 +466,16 @@
        "      <td>2014-01-31</td>\n",
        "      <td>2015-11-03</td>\n",
        "      <td>...</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>623.0</td>\n",
-       "      <td>214.0</td>\n",
-       "      <td>298.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>3.611650</td>\n",
-       "      <td>15.634615</td>\n",
-       "      <td>2.911215</td>\n",
-       "      <td>2.013514</td>\n",
-       "      <td>1.744657</td>\n",
+       "      <td>52.00</td>\n",
+       "      <td>623.00</td>\n",
+       "      <td>214.00</td>\n",
+       "      <td>298.00</td>\n",
+       "      <td>148.00</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>15.63</td>\n",
+       "      <td>2.91</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>1.74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>469</th>\n",
@@ -490,16 +490,16 @@
        "      <td>2015-01-30</td>\n",
        "      <td>2016-01-22</td>\n",
        "      <td>...</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>737.0</td>\n",
-       "      <td>264.0</td>\n",
-       "      <td>395.0</td>\n",
-       "      <td>222.0</td>\n",
-       "      <td>3.766917</td>\n",
-       "      <td>15.848101</td>\n",
-       "      <td>2.791667</td>\n",
-       "      <td>1.779279</td>\n",
-       "      <td>1.596294</td>\n",
+       "      <td>79.00</td>\n",
+       "      <td>737.00</td>\n",
+       "      <td>264.00</td>\n",
+       "      <td>395.00</td>\n",
+       "      <td>222.00</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>15.85</td>\n",
+       "      <td>2.79</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>1.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>470</th>\n",
@@ -514,16 +514,16 @@
        "      <td>2015-11-03</td>\n",
        "      <td>2016-12-23</td>\n",
        "      <td>...</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>287.0</td>\n",
-       "      <td>469.0</td>\n",
-       "      <td>217.0</td>\n",
-       "      <td>3.565517</td>\n",
-       "      <td>17.506849</td>\n",
-       "      <td>2.926829</td>\n",
-       "      <td>2.161290</td>\n",
-       "      <td>2.287146</td>\n",
+       "      <td>73.00</td>\n",
+       "      <td>840.00</td>\n",
+       "      <td>287.00</td>\n",
+       "      <td>469.00</td>\n",
+       "      <td>217.00</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>17.51</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>2.16</td>\n",
+       "      <td>2.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>471</th>\n",
@@ -538,16 +538,16 @@
        "      <td>2015-11-03</td>\n",
        "      <td>2016-12-23</td>\n",
        "      <td>...</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>765.0</td>\n",
-       "      <td>253.0</td>\n",
-       "      <td>449.0</td>\n",
-       "      <td>215.0</td>\n",
-       "      <td>3.572650</td>\n",
-       "      <td>15.235294</td>\n",
-       "      <td>3.023715</td>\n",
-       "      <td>2.088372</td>\n",
-       "      <td>1.739992</td>\n",
+       "      <td>68.00</td>\n",
+       "      <td>765.00</td>\n",
+       "      <td>253.00</td>\n",
+       "      <td>449.00</td>\n",
+       "      <td>215.00</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>15.24</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>2.09</td>\n",
+       "      <td>1.74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>472</th>\n",
@@ -562,16 +562,16 @@
        "      <td>2015-11-03</td>\n",
        "      <td>2016-12-23</td>\n",
        "      <td>...</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>852.0</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>460.0</td>\n",
-       "      <td>201.0</td>\n",
-       "      <td>2.858896</td>\n",
-       "      <td>12.395349</td>\n",
-       "      <td>2.840000</td>\n",
-       "      <td>2.288557</td>\n",
-       "      <td>0.976340</td>\n",
+       "      <td>86.00</td>\n",
+       "      <td>852.00</td>\n",
+       "      <td>300.00</td>\n",
+       "      <td>460.00</td>\n",
+       "      <td>201.00</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>12.40</td>\n",
+       "      <td>2.84</td>\n",
+       "      <td>2.29</td>\n",
+       "      <td>0.98</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -606,35 +606,35 @@
        "472         BBB       2016-12-23             BBB           2015-11-03   \n",
        "\n",
        "    next_rating_date_or_end_of_data  ...  Weak Active  Passive  Ovrst  Undrst  \\\n",
-       "0                        2015-02-18  ...  42.0  495.0    186.0  364.0   131.0   \n",
-       "1                        2015-02-18  ...  46.0  656.0    199.0  465.0   152.0   \n",
-       "2                        2015-05-28  ...  88.0  591.0    208.0  468.0   151.0   \n",
-       "3                        2015-08-25  ...  70.0  565.0    214.0  415.0   135.0   \n",
-       "4                        2016-05-20  ...  70.0  565.0    219.0  449.0   148.0   \n",
+       "0                        2015-02-18  ... 42.00 495.00   186.00 364.00  131.00   \n",
+       "1                        2015-02-18  ... 46.00 656.00   199.00 465.00  152.00   \n",
+       "2                        2015-05-28  ... 88.00 591.00   208.00 468.00  151.00   \n",
+       "3                        2015-08-25  ... 70.00 565.00   214.00 415.00  135.00   \n",
+       "4                        2016-05-20  ... 70.00 565.00   219.00 449.00  148.00   \n",
        "..                              ...  ...   ...    ...      ...    ...     ...   \n",
-       "468                      2015-11-03  ...  52.0  623.0    214.0  298.0   148.0   \n",
-       "469                      2016-01-22  ...  79.0  737.0    264.0  395.0   222.0   \n",
-       "470                      2016-12-23  ...  73.0  840.0    287.0  469.0   217.0   \n",
-       "471                      2016-12-23  ...  68.0  765.0    253.0  449.0   215.0   \n",
-       "472                      2016-12-23  ...  86.0  852.0    300.0  460.0   201.0   \n",
+       "468                      2015-11-03  ... 52.00 623.00   214.00 298.00  148.00   \n",
+       "469                      2016-01-22  ... 79.00 737.00   264.00 395.00  222.00   \n",
+       "470                      2016-12-23  ... 73.00 840.00   287.00 469.00  217.00   \n",
+       "471                      2016-12-23  ... 68.00 765.00   253.00 449.00  215.00   \n",
+       "472                      2016-12-23  ... 86.00 852.00   300.00 460.00  201.00   \n",
        "\n",
-       "           PN         SW        AP        OU     TONE1  \n",
-       "0    5.518519  15.261905  2.661290  2.778626  3.188264  \n",
-       "1    5.348485  15.934783  3.296482  3.059211  3.681858  \n",
-       "2    3.927711   8.113636  2.841346  3.099338  1.307366  \n",
-       "3    5.250000   9.142857  2.640187  3.074074  2.025933  \n",
-       "4    4.209877  10.442857  2.579909  3.033784  1.815531  \n",
-       "..        ...        ...       ...       ...       ...  \n",
-       "468  3.611650  15.634615  2.911215  2.013514  1.744657  \n",
-       "469  3.766917  15.848101  2.791667  1.779279  1.596294  \n",
-       "470  3.565517  17.506849  2.926829  2.161290  2.287146  \n",
-       "471  3.572650  15.235294  3.023715  2.088372  1.739992  \n",
-       "472  2.858896  12.395349  2.840000  2.288557  0.976340  \n",
+       "      PN    SW   AP   OU  TONE1  \n",
+       "0   5.52 15.26 2.66 2.78   3.19  \n",
+       "1   5.35 15.93 3.30 3.06   3.68  \n",
+       "2   3.93  8.11 2.84 3.10   1.31  \n",
+       "3   5.25  9.14 2.64 3.07   2.03  \n",
+       "4   4.21 10.44 2.58 3.03   1.82  \n",
+       "..   ...   ...  ...  ...    ...  \n",
+       "468 3.61 15.63 2.91 2.01   1.74  \n",
+       "469 3.77 15.85 2.79 1.78   1.60  \n",
+       "470 3.57 17.51 2.93 2.16   2.29  \n",
+       "471 3.57 15.24 3.02 2.09   1.74  \n",
+       "472 2.86 12.40 2.84 2.29   0.98  \n",
        "\n",
        "[4724 rows x 159 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -3335,7 +3335,7 @@
        "TONE1                                                        1.34  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3359,7 +3359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3370,7 +3370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -3562,7 +3562,7 @@
        "[112 rows x 7 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3596,7 +3596,7 @@
     "    sum_stats_clean[col] = sum_stats_clean[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Export to LaTeX\n",
     "lt_string = sum_stats_clean.to_latex(index=False, column_format='c' * 7, escape=False, longtable=True, label='tab:numeric_summary_statistics', caption='Numeric Summary Statistics')\n",
-    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "latex_with_font_size = \"\\\\tiny\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open(output_folder + 'Numeric_Summary_Statistics.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)\n",
     "\n",
@@ -3605,7 +3605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -3614,7 +3614,7 @@
        "1"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3627,7 +3627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -3662,7 +3662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -3680,7 +3680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -3708,7 +3708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -3738,7 +3738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -3808,7 +3808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -3838,7 +3838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -3881,7 +3881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -3913,7 +3913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -3964,7 +3964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -4026,7 +4026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -4054,7 +4054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -4066,7 +4066,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4085,7 +4085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -4111,7 +4111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -4163,7 +4163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -4201,7 +4201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -4244,7 +4244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -4360,7 +4360,7 @@
        "0           workingCapital  4724                 6.946238"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4385,7 +4385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -4500,7 +4500,7 @@
        "Altman_Z 4,724.00  1.88 1.30 -0.91 0.94 1.58 2.47 7.56"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
