--- a/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
+++ b/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
@@ -37,3 +37,5 @@
 \renewcommand{\numCompanies}{387}
 \renewcommand{\numQuarters}{4,724}
 \renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4,724}
+\renewcommand{\numCompanies}{387}
