--- a/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
+++ b/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
@@ -39,3 +39,17 @@
 \renewcommand{\numCompanies}{387}
 \renewcommand{\numQuarters}{4,724}
 \renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{5,670}
+\renewcommand{\numCompanies}{437}
+\renewcommand{\numQuarters}{5,670}
+\renewcommand{\numCompanies}{437}
+\renewcommand{\numQuarters}{5,670}
+\renewcommand{\numCompanies}{437}
+\renewcommand{\numQuarters}{5,670}
+\renewcommand{\numCompanies}{437}
+\renewcommand{\numQuarters}{5,670}
+\renewcommand{\numCompanies}{437}
+\renewcommand{\numQuarters}{5,670}
+\renewcommand{\numCompanies}{437}
+\renewcommand{\numQuarters}{5,670}
+\renewcommand{\numCompanies}{437}
