--- a/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
+++ b/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
@@ -5,3 +5,10 @@
 \renewcommand{\shareNotChanges}{93.59\%}
 \renewcommand{\shareNotChanges}{93.59\%}
 \renewcommand{\shareNotChanges}{93.59\%}
+\renewcommand{\shareNotChanges}{94.66\%}
+\renewcommand{\shareNotChanges}{94.66\%}
+\renewcommand{\shareNotChanges}{94.66\%}
+\renewcommand{\shareNotChanges}{94.66\%}
+\renewcommand{\shareNotChanges}{94.66\%}
+\renewcommand{\shareNotChanges}{94.66\%}
+\renewcommand{\shareNotChanges}{94.66\%}
