--- a/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
+++ b/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
@@ -1,3 +1,4 @@
 \newcommand{\avgCompanyMentions}{90.93}
 \newcommand{\avgCompanyMentions}{97.78}
 \renewcommand{\avgCompanyMentions}{98.66}
+\renewcommand{\avgCompanyMentions}{98.66}
