--- a/Output/All Data EDA/NLP EDA/avg_call_length.tex
+++ b/Output/All Data EDA/NLP EDA/avg_call_length.tex
@@ -1,3 +1,4 @@
 \newcommand{\avgCallLength}{8688.25}
 \newcommand{\avgCallLength}{8,776.18}
 \renewcommand{\avgCallLength}{8,754.25}
+\renewcommand{\avgCallLength}{8,754.25}
