--- a/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
+++ b/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
@@ -53,3 +53,5 @@
 \renewcommand{\numCompanies}{437}
 \renewcommand{\numQuarters}{5,670}
 \renewcommand{\numCompanies}{437}
+\renewcommand{\numQuarters}{5,670}
+\renewcommand{\numCompanies}{437}
