--- a/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
+++ b/Output/All Data EDA/Tabular EDA/share_of_ratings_same_as_previous_fixed_quarter_date.tex
@@ -12,3 +12,4 @@
 \renewcommand{\shareNotChanges}{94.66\%}
 \renewcommand{\shareNotChanges}{94.66\%}
 \renewcommand{\shareNotChanges}{94.66\%}
+\renewcommand{\shareNotChanges}{94.66\%}
