company mentions check

--- a/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA - NER on Company Names.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA - NER on Company Names.ipynb
@@ -169,7 +169,127 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>fixed_quarter_date</th>\n",
+       "      <th>company_mentions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2014-10-01</td>\n",
+       "      <td>122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2015-04-01</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2015-07-01</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2015-10-01</td>\n",
+       "      <td>111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5665</th>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2015-10-01</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5666</th>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5667</th>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2016-04-01</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5668</th>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5669</th>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2016-10-01</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5670 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ticker fixed_quarter_date  company_mentions\n",
+       "0      AAPL         2014-10-01               122\n",
+       "1      AAPL         2015-01-01                87\n",
+       "2      AAPL         2015-04-01                83\n",
+       "3      AAPL         2015-07-01                83\n",
+       "4      AAPL         2015-10-01               111\n",
+       "...     ...                ...               ...\n",
+       "5665    ZTS         2015-10-01                45\n",
+       "5666    ZTS         2016-01-01               107\n",
+       "5667    ZTS         2016-04-01                90\n",
+       "5668    ZTS         2016-07-01                75\n",
+       "5669    ZTS         2016-10-01                79\n",
+       "\n",
+       "[5670 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Limit to items in the finalized dataset\n",
     "# list of files in '../../../Data/All_Data/All_Data_with_NLP_Features'\n",
@@ -181,7 +301,8 @@
     "# Convert fixed_quarter_date to datetime in both dataframes\n",
     "df['fixed_quarter_date'] = pd.to_datetime(df['fixed_quarter_date'])\n",
     "all_data_with_nlp_features_ticker_ecd['fixed_quarter_date'] = pd.to_datetime(all_data_with_nlp_features_ticker_ecd['fixed_quarter_date'])\n",
-    "df = df.merge(all_data_with_nlp_features_ticker_ecd, on = ['ticker', 'fixed_quarter_date'], how = 'inner')"
+    "df = df.merge(all_data_with_nlp_features_ticker_ecd, on = ['ticker', 'fixed_quarter_date'], how = 'inner')\n",
+    "df"
    ]
   },
   {
