--- a/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
+++ b/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
@@ -2,3 +2,4 @@
 \newcommand{\avgCompanyMentions}{97.78}
 \renewcommand{\avgCompanyMentions}{98.66}
 \renewcommand{\avgCompanyMentions}{98.66}
+\renewcommand{\avgCompanyMentions}{98.66}
